--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href="/">
+    <base href="./">
 
     <meta charset="UTF-8">
     <meta content="IE-Edge" http-equiv="X-UA-Compatible">
@@ -27,16 +27,16 @@
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="./favicon.png"/>
 
     <title>igm</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
 
     <!-- Your existing scripts -->
-    <script src="js/camera_logic.js" defer></script>
-    <script src="js/face-api.js" defer></script>
-    <script src="js/face-api-helper.js" defer></script>
-    <script src="js/face_worker.js" defer></script>
+    <script src="./js/camera_logic.js" defer></script>
+    <script src="./js/face-api.js" defer></script>
+    <script src="./js/face-api-helper.js" defer></script>
+    <script src="./js/face_worker.js" defer></script>
 
     <!-- START: CSS for the loading screen -->
     <style>
@@ -111,13 +111,13 @@
 <body>
 <!-- START: HTML for the loading indicator -->
 <div id="loading-indicator">
-    <img src="moth.jpeg" alt="Loading Moth">
+    <img src="./moth.jpeg" alt="Loading Moth">
 <!--    <div class="spinner"></div>-->
 <!--    <p>Initializing Moth Engine...</p>-->
 </div>
 <!-- END: HTML for the loading indicator -->
 
-<script src="flutter_bootstrap.js" async></script>
+<script src="./flutter_bootstrap.js" async></script>
 
 <!-- START: JavaScript to hide the loader when Flutter is ready -->
 <script>
