--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <link rel="manifest" href="./manifest.json">
 
     <!-- Your existing scripts -->
-    <script src="./js/camera_logic.js" defer></script>
-    <script src="./js/face-api.js" defer></script>
-    <script src="./js/face-api-helper.js" defer></script>
-    <script src="./js/face_worker.js" defer></script>
+    <script src=".js/camera_logic.js" defer></script>
+    <script src=".js/face-api.js" defer></script>
+    <script src=".js/face-api-helper.js" defer></script>
+    <script src=".js/face_worker.js" defer></script>
 
     <!-- START: CSS for the loading screen -->
     <style>
