--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       This is a placeholder for base href that will be replaced by the value of
       the `--base-href` argument provided to `flutter build`.
     -->
-    <base href=".">
+    <base href="./">
 
     <meta charset="UTF-8">
     <meta content="IE-Edge" http-equiv="X-UA-Compatible">
@@ -33,10 +33,10 @@
     <link rel="manifest" href="./manifest.json">
 
     <!-- Your existing scripts -->
-    <script src=".js/camera_logic.js" defer></script>
-    <script src=".js/face-api.js" defer></script>
-    <script src=".js/face-api-helper.js" defer></script>
-    <script src=".js/face_worker.js" defer></script>
+    <script src="./js/camera_logic.js" defer></script>
+    <script src="./js/face-api.js" defer></script>
+    <script src="./js/face-api-helper.js" defer></script>
+    <script src="./js/face_worker.js" defer></script>
 
     <!-- START: CSS for the loading screen -->
     <style>
