--- a/index.html
+++ b/index.html
@@ -1,55 +1,3 @@
-<!-- START: JavaScript to hide the loader when Flutter is ready (ROBUST VERSION 2.0) -->
-<script>
-    window.addEventListener('load', function(ev) {
-      // Get a reference to the loader element.
-      var loadingIndicator = document.getElementById("loading-indicator");
-
-      _flutter.loader.loadEntrypoint({
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            // The try/finally block is still good practice.
-            try {
-              return appRunner.runApp();
-            } finally {
-              // This is the guaranteed execution block.
-              if (loadingIndicator) {
-                console.log("Flutter is ready, hiding loading indicator...");
-
-                // 1. Start the fade-out animation for a smooth visual transition.
-                loadingIndicator.classList.add('fade-out');
-                
-                // 2. Immediately prevent it from capturing clicks or interfering.
-                loadingIndicator.style.pointerEvents = 'none';
-
-                // 3. After the animation, forcefully hide it and then remove it.
-                // This is the key change. We use display: 'none' as a final hammer.
-                setTimeout(function() {
-                  loadingIndicator.style.display = 'none'; // Force hide
-                  loadingIndicator.remove(); // Then clean up the DOM
-                }, 500); // This must match your CSS animation duration.
-              }
-            }
-          });
-        }
-      });
-    });
-</script>
-<!-- END: JavaScript to hide the loader -->```
-
-### Why This Works
-
-1.  **Guaranteed Execution:** The `finally` block ensures this code runs no matter what.
-2.  **Immediate UI Unblocking:** `pointerEvents = 'none'` instantly stops the loader from interfering with your Flutter UI, even while it's still visible and fading out.
-3.  **The "Hammer": `display = 'none'`**: This is the most important change. After 500 milliseconds (the duration of your fade animation), this command tells the browser to completely stop rendering the element. It's a much more powerful and immediate instruction than just relying on the animation to finish. Even if the animation stutters, this will hide the element.
-4.  **`remove()`:** Finally, we clean up the DOM by removing the element entirely.
-
----
-
-### Complete `web/index.html` with the Final Fix
-
-Here is the full, corrected file for you to copy and paste.
-
-```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -74,6 +22,7 @@ Here is the full, corrected file for you to copy and paste.
     <script src="./js/face-api-helper.js" defer></script>
     <script src="./js/face_worker.js" defer></script>
 
+    <!-- START: CSS for the loading screen -->
     <style>
         body {
           background-color: #000000;
@@ -126,57 +75,35 @@ Here is the full, corrected file for you to copy and paste.
           0% { -webkit-transform: rotate(0deg); }
           100% { -webkit-transform: rotate(360deg); }
         }
-
-        .fade-out {
-          animation: fadeOut 0.5s forwards;
-        }
-
-        @keyframes fadeOut {
-          from { opacity: 1; }
-          to { opacity: 0; }
-        }
     </style>
+    <!-- END: CSS for the loading screen -->
 </head>
 <body>
+<!-- START: HTML for the loading indicator -->
 <div id="loading-indicator">
     <img src="./moth.jpeg" alt="Loading Moth">
-    <!-- You had these commented out, which is fine -->
     <!-- <div class="spinner"></div> -->
     <!-- <p>Initializing Moth Engine...</p> -->
 </div>
+<!-- END: HTML for the loading indicator -->
 
 <script src="./flutter_bootstrap.js" async></script>
 
-<!-- START: JavaScript to hide the loader when Flutter is ready (ROBUST VERSION 2.0) -->
+<!-- START: JavaScript to hide the loader when Flutter is ready (BULLETPROOF VERSION) -->
 <script>
     window.addEventListener('load', function(ev) {
-      // Get a reference to the loader element.
-      var loadingIndicator = document.getElementById("loading-indicator");
-
       _flutter.loader.loadEntrypoint({
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
-            // Use a try/finally block for guaranteed execution.
-            try {
-              return appRunner.runApp();
-            } finally {
-              // This block will run ALWAYS after runApp() is called.
+            // This runs the Flutter app and returns a promise that resolves when it's initialized.
+            appRunner.runApp().then(function(app) {
+              // This is the safest moment to remove the loader, after the app is running.
+              var loadingIndicator = document.getElementById("loading-indicator");
               if (loadingIndicator) {
-                console.log("Flutter is ready, hiding loading indicator...");
-
-                // 1. Start the fade-out animation.
-                loadingIndicator.classList.add('fade-out');
-                
-                // 2. Immediately prevent it from capturing clicks.
-                loadingIndicator.style.pointerEvents = 'none';
-
-                // 3. After the animation, forcefully hide it and then remove it.
-                setTimeout(function() {
-                  loadingIndicator.style.display = 'none'; // Force hide
-                  loadingIndicator.remove(); // Clean up the DOM
-                }, 500); // This must match your CSS animation duration.
+                console.log("Flutter app is running, removing loading indicator immediately.");
+                loadingIndicator.remove();
               }
-            }
+            });
           });
         }
       });
